Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8138

[Regression] Predefined links in anomaly don't work on N95

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.6.2
    • None
    • None
    • 51a5901a26169276131c88aab3184fb0fa5b814c

    Description

      1. Launch anomaly.
      2. Use the keypad to navigate to one of the predefined links.
      3. Clicking on the links have no effect, neither single nor double click.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            axisnokia axisnokia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes