Double-click support for virtual cursor in Symbian

This makes it possible to use itemviews with S60 style, as activation
of items requires a double-click there.

Task-number: QTBUG-8138
Reviewed-by: Shane Kearns